@@ -1381,6 +1381,23 @@ loop extension) for.</font></td>
 <td><font size=-1>Base color that annotation text is rendered on.</font></td>
 </tr>
 
+<tr NOSAVE>
+<td><a NAME="cacheThreshold"></a><font size=-1>cacheThreshold</font></td>
+
+<td><font size=-1>All Images</font></td>
+
+<td><font size=-1>unsigned int</font></td>
+
+<td BGCOLOR="#666666" NOSAVE><font size=-1>&nbsp;</font></td>
+
+<td><font size=-1>unsigned int</font></td>
+
+<td><font size=-1>Pixel cache threshold in megabytes with default value
+80MB. Once this threshold is exceeded, all subsequent pixels cach operations
+are to/from disk. This is a static method and the attribute it sets is
+shared by all Image objects.</font></td>
+</tr>
+
 <tr>
 <td>
 <center><a NAME="chromaBluePrimary"></a><font size=-1>chroma-</font>
